Bug #57859
bail from handle_command() if _generate_command_map() fails
Status:
Pending Backport
Priority:
Normal
Assignee:
Category:
Correctness/Safety
Target version:
-
% Done:
100%
Description
https://tracker.ceph.com/issues/54558 catches an exception from handle_command() to avoid mon termination due to a potential uncaught exception but does not bail out of the function after catching and handling the exception, so this fix cleans that up.
Related issues
History
#1 Updated by Ilya Dryomov 4 months ago
- Tracker changed from Cleanup to Bug
- Category changed from Code Hygiene to Correctness/Safety
- Status changed from New to Fix Under Review
- Assignee set to nikhil kshirsagar
- Regression set to No
- Severity set to 3 - minor
- Pull request ID set to 48044
#2 Updated by Ponnuvel P 3 months ago
- Status changed from Fix Under Review to Pending Backport
PR https://github.com/ceph/ceph/pull/48044 has been merged in main.
#3 Updated by Backport Bot 3 months ago
- Copied to Backport #58006: quincy: bail from handle_command() if _generate_command_map() fails added
#4 Updated by Backport Bot 3 months ago
- Copied to Backport #58007: pacific: bail from handle_command() if _generate_command_map() fails added
#5 Updated by Backport Bot 3 months ago
- Tags set to backport_processed