mon: Bail from handle_command() if _generate_command_map() fails

Bail out of handle_command() if _generate_command_map() throws
an exception due to invalid json. This is an additional fix
for the one that went in through
1109e62f6a3c0a7e06a088c4b833c8ecec51f791

Fixes: https://tracker.ceph.com/issues/57859
Signed-off-by: Nikhil Kshirsagar <nikhil.kshirsagar@canonical.com>